# SandForge-Engine

./: README.md
Base/src/: main.cpp
Base/src/audio/: audio.cpp
Base/src/core/: engine.cpp  engine.h  material.cpp  material.h
Base/src/render/: renderer.cpp  renderer.h
Base/src/ui/: ui.cpp
SandForge-Engine/: CMakeLists.txt
SandForge-Engine/assets/shaders/: grid.fs.glsl  sprite.fs.glsl  sprite.vs.glsl  ui.fs.glsl  ui.vs.glsl
SandForge-Engine/assets/sprites/: SpritesTest.psd
SandForge-Engine/src/: main.cpp
SandForge-Engine/src/app/: app.cpp  app.h  defs.h  log.h  module.h  timer.cpp  timer.h
SandForge-Engine/src/audio/: audio.cpp  audio.h
SandForge-Engine/src/core/: engine.cpp  engine.h  input.cpp  input.h  material.cpp  material.h  utils.cpp  utils.h
SandForge-Engine/src/render/: renderer.cpp  renderer.h  sprite.cpp  sprite.h  texture.cpp  texture.h
SandForge-Engine/src/ui/: ui.cpp  ui.h
